Chore: Add `technologies` column to `projects` table, introduce custom `Date` type, update schemas, NGINX config, and refactor DTOs and models
