# backend/docs/swagger.yaml
@@ -83,6 +83,9 @@ definitions:
         type: string
       start_date:
         type: string
+      technologies:
+        maxLength: 500
+        type: string
       url:
         maxLength: 500
         type: string
@@ -104,6 +107,8 @@ definitions:
       name:
         type: string
       startDate:
+        type: string
+      technologies:
         type: string
       updatedAt:
         type: string
@@ -152,6 +157,9 @@ definitions:
         minLength: 1
         type: string
       start_date:
+        type: string
+      technologies:
+        maxLength: 500
         type: string
       url:
         maxLength: 500
